workspace-sf/force-app/main/default/objects/FilialParceiro__c/FilialParceiro__c.object-meta.xml
<CustomObject>
    <description>Objet para cadastro das filiais de cada objeto Parceiro</description>
    <label>Filial do Parceiro</label>
    <nameField>
        <label>Razão</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Filiais do Parceiro</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>