workspace-sf/force-app/main/default/objects/FilialParceiro__c/fields/CodigoFilialParceiro__c.field-meta.xml
<CustomField>
    <fullName>CodigoFilialParceiro__c</fullName>
    <label>Código Filial no Parceiro</label>
    <length>50</length>
    <type>Text</type>
</CustomField>