workspace-sf/force-app/main/default/objects/FilialParceiro__c/fields/IE__c.field-meta.xml
<CustomField>
    <fullName>IE__c</fullName>
    <label>I/E</label>
    <length>20</length>
    <type>Text</type>
</CustomField>