workspace-sf/force-app/main/default/objects/FilialParceiro__c/fields/NomeFantasia__c.field-meta.xml
<CustomField>
    <fullName>NomeFantasia__c</fullName>
    <label>Nome Fantasia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>